# stardate

spex/: .gitignore  AGENTS.md  BRICKs.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODOs.md
spex/.claude/agents/: spex-adapter-writer.md  spex-verifier.md
spex/.github/workflows/: pages.yml
spex/crates/spex-cli/: Cargo.toml
spex/crates/spex-cli/src/: ascii.rs  brew_deps.rs  brick.rs  cargo_deps.rs  deb_deps.rs  disk_usage.rs  export_static.rs  frame_sequence.rs  graph_diff.rs  main.rs  molecule.rs  nav.rs  npm_deps.rs  ps_tree.rs  pstree_demo.rs  sql_schema.rs  trace.rs
spex/crates/spex-cli/tests/: end_to_end_journey.rs  schema_validation.rs
spex/crates/spex-core/: Cargo.toml
spex/crates/spex-core/src/: lib.rs
spex/crates/spex-graph/: Cargo.toml
spex/crates/spex-graph/src/: display.rs  (+2 more)
spex/crates/spex-io/: Cargo.toml
spex/crates/spex-ldraw/: Cargo.toml
spex/crates/spex-server/: Cargo.toml
spex/crates/spex-tiler/: Cargo.toml
spex/docs/: ARCHITECTURE.md
spex/docs/agents/: README.md  adapters.md  context-budget.md  verification.md  working-mode.md
spex/ldraw-scenes/: monolith.ldr
spex/scripts/: gallery.sh  gen_bigmac_demo.py  gen_german_tsp_demo.py  gen_stock_demo.py  gen_traveling_salesman.py  gen_wikipedia_crawl.py  gen_wikipedia_demo.py  walkthrough.sh
spex/scripts/stock-data/: byd.json  tsla.json  vow3.json
spex/scripts/wikipedia-crawl-data/: frankfurt-depth3-fanout3.json
spex/spec/: README.md  brickmesh.schema.json  brickscene.schema.json  graph.schema.json  meta.schema.json  nodes.schema.json  sequence.schema.json  tileset.schema.json
spex/unibrick/: README.md  brickmesh.py  brickscene.py  gen_brick_demo.py  gen_model_demo.py  gen_monolith_assembly.py  gen_monolith_demo.py  ldraw.py  sampling.py
spex/viewer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
spex/viewer/src/: lod.ts  main.ts  maxheap.ts  packetAnimation.ts  tileset.ts
(+13 files in other folders)
