[package]
name = "spex-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spex"
path = "src/main.rs"

[dependencies]
spex-core = { workspace = true }
spex-io = { workspace = true }
spex-tiler = { workspace = true }
spex-server = { workspace = true }
spex-graph = { workspace = true }
spex-ldraw = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
ansi-to-tui = "8.0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
jsonschema = { version = "0.48", default-features = false }
tempfile = "3"
