[package]
name = "spex-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.5", features = ["fs"] }
rust-embed = "8"
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
